fixed issues related to px, removed scrollbar on video container

--- a/src/styles/base_mobile.css
+++ b/src/styles/base_mobile.css
@@ -15,8 +15,8 @@
 
   .header-center {
     margin-top: 21px;
-    margin-left: 0px;
-    margin-right: 0px;
+    margin-left: 0;
+    margin-right: 0;
     min-width: 119px;
   }
 
@@ -40,7 +40,7 @@
   }
 
   .header-center > .search-button {
-    right: 0px;
+    right: 0;
     top: -20px;
   }
 
@@ -86,8 +86,8 @@
   }
 
   .sidebar {
-    bottom: 0px;
-    right: 0px;
+    bottom: 0;
+    right: 0;
     top: 963px;
     z-index: 100;
     width: 320px;
@@ -110,8 +110,8 @@
   .sidebar-nav-item {
     flex-direction: column;
     font-size: 10px;
-    line-height: 12.55px;
-    margin: 0px;
+    line-height: 13px;
+    margin: 0;
     row-gap: 5px;
     align-items: center;
     justify-content: center;
@@ -130,6 +130,6 @@
   }
 
   .sidebar-nav-item:nth-child(3) {
-    margin-bottom: 0px;
+    margin-bottom: 0;
   }
 }
