--- a/src/styles/channelpage/adaptive.css
+++ b/src/styles/channelpage/adaptive.css
@@ -48,7 +48,7 @@
 
   .channel-info-name {
     font-size: 20px;
-    line-height: 25.1px;
+    line-height: 25px;
   }
 }
 
@@ -56,7 +56,7 @@
   .main-channel {
     margin-left: 0;
     margin-right: 0;
-    padding-right: 0px;
+    padding-right: 0;
     margin-top: 60px;
   }
 
@@ -80,11 +80,11 @@
 
   .channel-info-subs {
     font-size: 12px;
-    line-height: 15.06px;
+    line-height: 15px;
   }
 
   .channel-info-subscribe-button {
-    line-height: 15.06px;
+    line-height: 15px;
   }
 
   .channel-info-left {
@@ -137,11 +137,11 @@
 
   .channel-navigation > div {
     font-size: 14px;
-    line-height: 17.57px;
+    line-height: 18px;
   }
 
   .channel-navigation > div:first-child {
-    line-height: 17.57px;
+    line-height: 18px;
     text-decoration: underline;
     text-underline-offset: 9px;
     border: none;
