--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -58,8 +58,8 @@
   top: 13px;
   right: 14px;
   border: none;
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
 }
 
 .header-right {
@@ -79,7 +79,7 @@
   background-color: rgba(255, 0, 0, 1);
   color: rgba(255, 255, 255, 1);
   font-size: 12px;
-  line-height: 15.06px;
+  line-height: 15px;
   text-align: center;
   padding-top: 0px;
   width: 16px;
