--- a/src/styles/homepage/adaptive.css
+++ b/src/styles/homepage/adaptive.css
@@ -104,8 +104,8 @@
     }
 
     .sidebar {
-      bottom: 0px;
-      left: 0px;
+      bottom: 0;
+      left: 0;
       top: auto;
       z-index: 100;
       width: 100%;
@@ -131,15 +131,15 @@
     .sidebar-nav-item {
       flex-direction: column;
       font-size: 10px;
-      line-height: 12.55px;
-      margin: 0px;
+      line-height: 13px;
+      margin: 0;
       row-gap: 5px;
       align-items: center;
       justify-content: center;
     }
 
     .sidebar-nav-item:nth-child(3) {
-      margin-bottom: 0px;
+      margin-bottom: 0;
     }
 
     .videos-from-channel {
