--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -21,7 +21,7 @@
   margin-bottom: 29px;
   color: rgba(137, 137, 137, 1);
   font-size: 16px;
-  line-height: 20.08px;
+  line-height: 20px;
 }
 
 .sidebar-item {
@@ -43,13 +43,13 @@
 }
 
 .sidebar-nav-item:last-child {
-  margin-bottom: 0px;
+  margin-bottom: 0;
 }
 
 .sidebar-subscriptions-text {
   font-size: 18px;
   font-weight: 700;
-  line-height: 22.59px;
+  line-height: 23px;
   margin-bottom: 30px;
 }
 .sidebar-subscriptions {
@@ -57,7 +57,7 @@
 }
 
 .sidebar-item:last-child {
-  margin-bottom: 0px;
+  margin-bottom: 0;
 }
 
 .settings {
@@ -66,5 +66,5 @@
   margin-top: 100px;
   color: rgba(137, 137, 137, 1);
   font-size: 16px;
-  line-height: 20.08px;
+  line-height: 20px;
 }
